--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.username=sa
 spring.datasource.password=1
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.mail.host=smtp-relay.brevo.com
+spring.mail.port=587
+spring.mail.username=YOUR_BREVO_EMAIL
+spring.mail.password=YOUR_PASSWORD
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
